--- a/Groovy/Components/_Imports.razor
+++ b/Groovy/Components/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using Groovy
 @using Groovy.Components
+
+@using Microsoft.AspNetCore.Components.Authorization
+@using System.ComponentModel.DataAnnotations
+@using Groovy.Data
+@using Groovy.Domain
