--- a/Groovy/Components/Layout/NavMenu.razor
+++ b/Groovy/Components/Layout/NavMenu.razor
@@ -16,22 +16,42 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="artists">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Artist
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="genres">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Genre
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="songs">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Song
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="listeninghistories">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Listening History
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="playlists">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Playlist
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="recommendations">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recommendation
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
