--- a/Groovy/Components/Pages/AdminPages/GenrePages/Delete.razor
+++ b/Groovy/Components/Pages/AdminPages/GenrePages/Delete.razor
@@ -1,8 +1,11 @@
-﻿@page "/artists/delete"
+﻿@page "/genres/delete"
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.EntityFrameworkCore
 @using Groovy.Domain
 @inject IDbContextFactory<Groovy.Data.GroovyContext> DbFactory
 @inject NavigationManager NavigationManager
+
+@attribute [Authorize(Roles = "Administrator")]
 
 <PageTitle>Delete</PageTitle>
 
@@ -10,42 +13,42 @@
 
 <p>Are you sure you want to delete this?</p>
 <div>
-    <h2>Artist</h2>
+    <h2>Genre</h2>
     <hr />
-    @if (artist is null)
+    @if (genre is null)
     {
         <p><em>Loading...</em></p>
     }
     else {
         <dl class="row">
             <dt class="col-sm-2">Name</dt>
-            <dd class="col-sm-10">@artist.Name</dd>
+            <dd class="col-sm-10">@genre.Name</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">DateCreated</dt>
-            <dd class="col-sm-10">@artist.DateCreated</dd>
+            <dd class="col-sm-10">@genre.DateCreated</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">DateUpdated</dt>
-            <dd class="col-sm-10">@artist.DateUpdated</dd>
+            <dd class="col-sm-10">@genre.DateUpdated</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">CreatedBy</dt>
-            <dd class="col-sm-10">@artist.CreatedBy</dd>
+            <dd class="col-sm-10">@genre.CreatedBy</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">UpdatedBy</dt>
-            <dd class="col-sm-10">@artist.UpdatedBy</dd>
+            <dd class="col-sm-10">@genre.UpdatedBy</dd>
         </dl>
-        <EditForm method="post" Model="artist" OnValidSubmit="DeleteArtist" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(artist is null)">Delete</button> |
-            <a href="/artists">Back to List</a>
+        <EditForm method="post" Model="genre" OnValidSubmit="DeleteGenre" FormName="delete" Enhance>
+            <button type="submit" class="btn btn-danger" disabled="@(genre is null)">Delete</button> |
+            <a href="/genres">Back to List</a>
         </EditForm>
     }
 </div>
 
 @code {
-    private Artist? artist;
+    private Genre? genre;
 
     [SupplyParameterFromQuery]
     private int Id { get; set; }
@@ -53,19 +56,19 @@
     protected override async Task OnInitializedAsync()
     {
         using var context = DbFactory.CreateDbContext();
-        artist = await context.Artist.FirstOrDefaultAsync(m => m.Id == Id);
+        genre = await context.Genre.FirstOrDefaultAsync(m => m.Id == Id);
 
-        if (artist is null)
+        if (genre is null)
         {
             NavigationManager.NavigateTo("notfound");
         }
     }
 
-    private async Task DeleteArtist()
+    private async Task DeleteGenre()
     {
         using var context = DbFactory.CreateDbContext();
-        context.Artist.Remove(artist!);
+        context.Genre.Remove(genre!);
         await context.SaveChangesAsync();
-        NavigationManager.NavigateTo("/artists");
+        NavigationManager.NavigateTo("/genres");
     }
 }
