--- a/Groovy/Components/Layout/NavMenu.razor
+++ b/Groovy/Components/Layout/NavMenu.razor
@@ -50,6 +50,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="library">
+                        <span class="bi bi-collection-fill" aria-hidden="true"></span> Library
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="recommendations">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recommendation
                     </NavLink>
