--- a/Groovy/Components/Pages/AdminPages/_Imports.razor
+++ b/Groovy/Components/Pages/AdminPages/_Imports.razor
@@ -1,2 +1,2 @@
 ﻿@using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles = "Administrator")]
+@attribute [Authorize(Roles = "Administrator, User, Artist")]
