artist can upload songs with audio. and user can listen

--- a/Groovy/Components/Layout/NavMenu.razor
+++ b/Groovy/Components/Layout/NavMenu.razor
@@ -30,6 +30,17 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="artist/my-songs">
+                        <span class="bi bi-music-note-list"></span> My Songs
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="artist/upload-song">
+                        <span class="bi bi-upload"></span> Upload Song
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link" href="genres">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Genre
                     </NavLink>
